[project]
name = "postgrip-agent"
version = "0.1.0"
description = "Python SDK for PostGrip Agent workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PostGrip" }]
license = { text = "MIT" }
keywords = ["postgrip", "agent", "workflow", "temporal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["postgrip_agent*"]

[tool.setuptools.package-data]
postgrip_agent = ["py.typed"]
